vn/author-guide: fix typo

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -145,7 +145,7 @@ This is a long description. The above line is a blank link.'
 
 4. Cuối mỗi bài viết thường có thông tin về tác giả, ngày cập nhật cuối
    cùng. Để bỏ qua thông tin này, chỉ việc đặt `virtual: true` trong phần
-   `metadata` của bài viết. _(Thực tết thì thiết lập này để dùng để phân
+   `metadata` của bài viết. _(Thực tế thì thiết lập này để dùng để phân
    biệt những trang tĩnh có nội dung đặt trên tập tin cụ thể, với các
    trang động được sinh ra nhờ các lọc đặc biệt, ví dụ, nhưng các trang
    `/tags/*`.)_
