vn/members: fix typo. Add tips

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -20,7 +20,14 @@ vui lòng liên hệ để chúng tôi cập nhật.
 * <http://viettug.org>: installed in 2012-04-25, kernel `3.4.4-2`
 * Goodtrans BO: installed in 2011-11-10, kernel `3.3.6-1`
 * icy's PC: installed in 2010-10-18, kernel `3.4.4-2`
-* icy's office box: instaleld in 2012-10-17, kernel `3.3.8-1`
+* icy's office box: installed in 2012-10-17, kernel `3.3.8-1`
+
+_Tips:_ To check whether you ArchLinux was installed, invoke the following
+command
+
+<pre>
+grep filesystem /var/log/pacman.log | head -1
+</pre>
 
 [stk]: http://projektantos.wordpress.com/
 [KyAnh]: /blog/~icy/
