Update tags for some pages

--- a/content/faq/what_is_linux.html
+++ b/content/faq/what_is_linux.html
@@ -1,7 +1,7 @@
 ---
 title: Linux là gì
 allow_comment: yes
-tags: ['archlinux', 'kernel']
+tags: ['archlinux', 'kernel', 'faq']
 ---
 
 # Linux là gì
