--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -1,7 +1,7 @@
 ---
 title: irc - trao đổi thời gian thực
 allow_comment: yes
-tags: ['irc', 'chat']
+tags: ['irc', 'chat', 'archlinuxvn']
 ---
 
 # Trao đổi thời gian thực
