vn/members: new machine zosolz

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -26,6 +26,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |icy office   |2012-10-17|3.3.8-1     |e17      |
 |redlotus     |????-??-??|3.4.6-1     |monsterwm|
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
+|zosolz       |2010-07-04|?.?.?-?     |xmonad   |
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
 
