vn/author-guide: nanoc watch requires gem :fssm

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -35,7 +35,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    * Ruby Gems _(trình quản lý gói cho Ruby; trình này đã có sẵn khi bạn
      cài Ruby 1.9 trên ArchLinux.)_
 
-   * Cài đặt gems bằng lệnh: `gem install nanoc adsf kramdown`
+   * Cài đặt gems bằng lệnh: `gem install nanoc adsf kramdown fssm`
 
 3. Tạo một nhân bản của mã nguồn trang chủ bằng lệnh
     `git clone git@viettug.org:archlinuxvn`
