--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -13,7 +13,8 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 
 ## Thông tin về kênh
 
-* Dịch vụ cung cấp bởi <http://irc.freenode.net>
+* Dịch vụ cung cấp bởi <http://freenode.net>
+* Server: **irc.freenode.net**
 * Kênh: __#archlinuxvn__
 * Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc
   ở Việt Nam (9h sáng - 5 giờ chiều).
