vn/author-guide: add note about github

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -150,6 +150,11 @@ This is a long description. The above line is a blank link.'
    trang động được sinh ra nhờ các lọc đặc biệt, ví dụ, nhưng các trang
    `/tags/*`.)_
 
+5. Nếu bạn có ghi vào kho [github] [], bạn hãy thực hiện gửi xác nhận
+   tới kho này, để các liên kết trong phần [liệt kê các thay đổi](/changes/)
+   được cập nhật đúng. Bạn cần biết dùng `remote` với `git`. _(Hãy hỏi
+  các bạn khác nếu bạn chưa biết nhé.)_
+
 3. Để đánh dấu thẻ (`tag`) cho bài viết, trong phần `metadata` bạn có thể
    chỉ ra danh sách các thẻ như ví dụ sau đây. Mỗi thẻ chỉ gồm các chữ cái
    (hoa thường như nhau) và con số (các cách đặt thẻ sai quy ước này sẽ
@@ -169,3 +174,4 @@ tags: ['git', 'programming']
 [git]: http://git-scm.com/
 [gitref]: http://gitref.dragula.org
 [gitconfig]: /doc/git/gitconfig
+[github]: https://github.com/archlinuxvn/home
