vn/irc: add note for web user

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -27,6 +27,11 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 Bạn chưa từng sử dụng IRC lần nào, có thể thử [dùng giao diện web] [webirc]
 của kênh. Chỉ việc chọn một `nickname` bất kỳ và [bắt đầu ở liên kết này] [webirc].
 
+**Lưu ý:** Khi dùng giao diện web, bạn cần phải gõ nhiều ký tự kiểm tra (`captcha`).
+Những ký tự này rất khó đọc _(do `freenode` đặt ra để giảm nhiễu hệ thống)_.
+Mẹo là bạn dùng `Reload` để thử  vài cụm khác nhau.
+Tuy nhiên, thử nhiều quá sẽ phản tác dụng (càng thử càng khó đọc!)
+
 ## Quy tắc ứng xử
 
 Bạn cần lưu ý vài điểm sau khi trao đổi trên kênh IRC
