--- a/content/faq/can_i_use_archlinux.html
+++ b/content/faq/can_i_use_archlinux.html
@@ -11,7 +11,8 @@ Tất nhiên là `được`, miễn là:
 * Bạn hiểu [[/faq/what_is_archlinux ArchLinux là gì]];
 * Bạn bè gần bạn đang dùng ArchLinux để có thể giúp đỡ bạn khi cần thiết;
   Xem [danh sách thành viên](/vn/members) có ai mà bạn quen biết không.
-* Bạn có thời gian để sẵn sàng điều chỉnh hệ thống từ dòng lệnh khi cần thiết.
+* Bạn có thời gian để sẵn sàng điều chỉnh hệ thống từ dòng lệnh khi cần thiết và đọc [Wiki](https://wiki.archlinux.org) 
+
 
 Bạn không nên dùng ArchLinux nếu bạn
 
