--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -8,7 +8,7 @@ tags: ['archlinuxvn']
 
 Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
 
-* **Sinh viên:** n0b0dy, [NgoHuy] [], quangteospk, VHNgoc, [redlotus] []
+* **Sinh viên:** n0b0dy, [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki
 * **Giáo viên. Giảng viên:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], C4NoC, Cooly
