--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -20,7 +20,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 
 | Tên máy     | Cài đặt  | Nhân       |VM/DE    |
 |:------------|:--------:|:----------:|:-------:|
-|[l00s3r][]   |2012-04-25|3.4.4-2     |none     |
+|[l00s3r][]   |2012-04-25|3.0.40-1-lts|none     |
 |Goodtrans    |2011-11-10|3.3.6-1     |none     |
 |icy PC       |2010-10-18|3.4.4-2 (*) |e17      |
 |icy office   |2012-10-17|3.3.8-1     |e17      |
