vn.irc: add freenode port and ssl note

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -14,7 +14,8 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 ## Thông tin về kênh
 
 * Dịch vụ cung cấp bởi <http://freenode.net>
-* Server: **irc.freenode.net**
+* Server: **irc.freenode.net**. See also [freenode servers] []
+* Port: 6697 (SSL), 6667 (non-SSL)
 * Kênh: __#archlinuxvn__
 * Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc
   ở Việt Nam (9h sáng - 5 giờ chiều).
@@ -53,3 +54,4 @@ Bạn cần lưu ý vài điểm sau khi trao đổi trên kênh IRC
 [webirc]: http://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4
 [bot]: /vn/bot/
 [irclog]: /irclogs/
+[freenode servers]: http://freenode.net/irc_servers.shtml
