--- a/content/faq/can_i_use_archlinux.html
+++ b/content/faq/can_i_use_archlinux.html
@@ -12,11 +12,12 @@ Tất nhiên là `được`, miễn là:
 * Bạn bè gần bạn đang dùng ArchLinux để có thể giúp đỡ bạn khi cần thiết;
   Xem [danh sách thành viên](/vn/members) có ai mà bạn quen biết không.
 * Bạn có thời gian để sẵn sàng điều chỉnh hệ thống từ dòng lệnh khi cần thiết và đọc [Wiki](https://wiki.archlinux.org) 
-
+* Bạn có tinh thần tự học cao và mong muốn đạt được những giá trị thực sự từ việc học hỏi những thứ mới mẻ
 
 Bạn không nên dùng ArchLinux nếu bạn
 
 * Thực sự nóng tính, thiếu kiên nhẫn; hoặc
+* Muốn thành pro trong mắt người khác; hoặc
 * Là người dùng trung thành của Windows; hoặc
 * Xem Ubuntu là số một; hoặc
 * Chỉ muốn biết ArchLinux là gì; hoặc
