--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -30,7 +30,8 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
      tin bạn có **không được chia sẻ cho bất kỳ bên thứ ba nào**.
 
 2. Cài đặt Ruby trên hệ thống của bạn, bằng lệnh `pacman -S ruby`.
-   Sau khi cài đặt Ruby, bạn cần cài đặt các thành phần sau
+   Sau khi cài đặt Ruby, bạn cần cài đặt các thành phần sau.
+   1 lưu ý nhỏ là bạn nên đọc kỹ [Ruby Wiki](https://wiki.archlinux.org/index.php/Ruby) trước khi cài nanoc và 1 số cái khác.
 
    * Ruby Gems _(trình quản lý gói cho Ruby; trình này đã có sẵn khi bạn
      cài Ruby 1.9 trên ArchLinux.)_
