--- a/content/faq/index.html
+++ b/content/faq/index.html
@@ -8,3 +8,4 @@ title: faq - Câu hỏi thường gặp
 2. [ArchLinux là gì](/faq/what_is_archlinux/)
 3. [Tôi dùng ArchLinux được không](/faq/can_i_use_archlinux)
 4. ArchLinux được dùng trong môi trường nào
+5. Muốn cài đặt và sử dụng được ArchLinux, tôi phải bắt đầu từ đâu ?
