--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -8,7 +8,7 @@ tags: ['archlinuxvn']
 
 Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
 
-* **Sinh viên:** n0b0dy, [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki
+* **Sinh viên:** [n0b0dy], [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki
 * **Giáo viên. Giảng viên:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], C4NoC, Cooly
@@ -20,6 +20,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 
 | Tên máy     | Cài đặt  | Nhân       |VM/DE    |
 |:------------|:--------:|:----------:|:-------:|
+|n0b0dy       |2012-08-09|3.4.8-1     |lxde     |
 |[l00s3r][]   |2012-04-25|3.4.4-2     |none     |
 |Goodtrans    |2011-11-10|3.3.6-1     |none     |
 |icy PC       |2010-10-18|3.4.4-2 (*) |e17      |
@@ -27,6 +28,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |redlotus     |????-??-??|3.4.6-1     |monsterwm|
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
 |zosolz       |2010-07-04|?.?.?-?     |xmonad   |
+
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
 
@@ -51,3 +53,4 @@ grep -E 'upgraded (linux|kernel)' /var/log/pacman.log \
 [NgoHuy]: /blog/~huy/
 [redlotus]: /blog/~redlotus/
 [l00s3r]: http://viettug.org/
+[n0b0dy]: /blog/~n0b0dy/
