vn.author-guide: add :toc

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -4,7 +4,12 @@ allow_comment: yes
 tags: ['archlinuxvn', 'blog']
 ---
 
-# Viết bài cho ArchLinuxVn
+**Mục lục**
+
+1. ToC
+{:toc}
+
+----
 
 ArchLinuxVn sử dụng [nanoc] [] để tạo trang
 các trang tĩnh từ mã nguồn được quản lý bằng `git`. Tất cả các tác giả
