*: Clean up title for all posts

--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,6 @@
 ---
-title: home
+title: Nhóm người dùng ArchLinux Việt Nam
 ---
-
-# Nhóm người dùng [ArchLinux] [] Việt Nam
 
 Đây là trang chủ của nhóm người Việt Nam dùng [ArchLinux] [].
 
