--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -1,10 +1,8 @@
 ---
-title: IRC bot
+title: Bot ở kênh IRC
 allow_comment: yes
 tags: ['irc', 'chat', 'archlinuxvn']
 ---
-
-# Bot ở kênh IRC
 
 Ở [kênh IRC nhóm] [irc], có một vài nick hoạt động để thực hiện lưu trữ log cho
 kênh (ví dụ: *bot_ka*, *kar*), và nick **bot** chính thức là **archl0n0xvn**.
