--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -1,10 +1,8 @@
 ---
-title: Thành viên
+title: Thành viên dùng ArchLinux
 allow_comment: yes
 tags: ['archlinuxvn']
 ---
-
-# Thành viên dùng ArchLinux
 
 Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
 
