vn.author-guide: fix section level

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -183,7 +183,7 @@ bài viết của bạn.
     từng phần là việc trộn (`merging`) và tách (`git cherry-pick`) sẽ
     đơn giản và ít lỗi hơn rất nhiều.
 
-## Thông tin `meta` của bài viết
+### Thông tin `meta` của bài viết
 
 2. Trong phần `metadata` của mỗi bài viết, bạn có thể đặt các thông tin
    tùy ý để tiện tìm kiếm sau này. Ví dụ `tags: [abc, xyz]`, hoặc
