vn.author-guide, Readme: Add some more gems

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -38,9 +38,15 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    Sau khi cài đặt Ruby, bạn cần cài đặt các thành phần sau.
 
    * Ruby Gems _(trình quản lý gói cho Ruby; trình này đã có sẵn khi bạn
-     cài Ruby 1.9 trên ArchLinux.)_
+     cài Ruby 1.9 trên ArchLinux)_
 
-   * Cài đặt gems bằng lệnh: `gem install nanoc adsf kramdown fssm`
+   * Thư viện `xslt` để dùng với `nokogiri`. Trên ArchLinux, thư viện này
+     được cài bằng lệnh `pacman -S libxslt`
+
+   * Cài đặt gems bằng lệnh:
+
+         gem install nanoc adsf \
+            kramdown fssm coderay nokogiri
 
 3. Tạo một nhân bản của mã nguồn trang chủ bằng lệnh
     `git clone git@viettug.org:archlinuxvn`
