faq.*: add :toc

--- a/content/faq/what_is_archlinux.html
+++ b/content/faq/what_is_archlinux.html
@@ -4,6 +4,11 @@ allow_comment: yes
 tags: ['faq', 'archlinux']
 ---
 
+* TOC
+{:toc}
+
+----
+
 ArchLinux là hệ điều hành sử dụng [nhân Linux] [Linux]. Không giống như
 Redhat, Mandrake, Ubuntu, Mint và nhiều hệ điều hành Linux khác,
 ArchLinux có các điểm khác biệt cơ bản sau
