--- a/content/faq/what_is_linux.html
+++ b/content/faq/what_is_linux.html
@@ -4,6 +4,11 @@ allow_comment: yes
 tags: ['archlinux', 'kernel', 'faq']
 ---
 
+* TOC
+{:toc}
+
+----
+
 Khi nói tới `Linux`, bạn có thể nghĩ tới ít nhất 3 chủ đề sau
 
 * Hệ điều hành Linux
