vn.irc: add toc

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -4,6 +4,9 @@ allow_comment: yes
 tags: ['irc', 'chat', 'archlinuxvn']
 ---
 
+* TOC
+{:toc}
+
 Nếu bạn có thắc mắc, trao đổi mà không muốn phải chờ đợi như khi sử dụng
 email, bạn hãy dùng kênh IRC để nói chuyện với các thành viên khác.
 Đây là kênh trao đổi được dùng nhiều bởi nó _đơn giản_ và có các _phần mềm
@@ -13,7 +16,7 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 
 * Dịch vụ cung cấp bởi <http://freenode.net>
 * Server: **irc.freenode.net**. See also [freenode servers] []
-* Port: 6697 (SSL), 6667 (non-SSL)
+* Port: 6697 _(SSL)_, 6667 _(non-SSL)_
 * Kênh: __#archlinuxvn__
 * Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc
   ở Việt Nam (9h sáng - 5 giờ chiều).
