vn.author-guide: Add cache information

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -98,7 +98,8 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    * Xóa bỏ các thông tin thừa và có thể gây nguy hiểm
    * Tải về các thư viện, quy tắc biên dịch từ nhánh `core`
    * Chạy lệnh `nanoc compile` để biên dịch mã nguồn
-   * Tải kết quả lên trang chủ của nhóm
+   * Tải kết quả lên trang chủ của nhóm <http://archlinuxvn.tuxfamily.org>
+   * Không quá 10 phút sau, thay đổi sẽ xuất hiện ở trang <http://archlinuxvn.org>
 
 5. Bạn không được thay đổi các tập tin `*.rb` và tập tin `layout/*`. Những
    tập tin này chỉ được thay đổi bởi người quản lý cấp cao nhất, bởi chúng
