vn.author-guide: New section (Example)

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -244,12 +244,19 @@ bài viết của bạn.
    hoặc dùng cách thụt đầu dòng 4 khoảng trắng cho mỗi dòng của đoạn mã;
    cách sau cùng là tốt nhất, ít gây lỗi nhất.
 
-### Và những mẹo khác
+## Những ví dụ
 
-1. Học bằng ví dụ. Có rất nhiều quy tắc, mẹo vặt. Nhưng cách đơn giản
-   là đọc qua mã nguồn của những bài viết khác để xem các bạn khác đã
-   làm gì và bạn có thể bắt chước theo hay không. Ví dụ, về cách dùng
-   các biểu tượng mặt cười trong bài viết, hãy xem các bài của `n0b0dy`.
+Học bằng ví dụ. Có rất nhiều quy tắc, mẹo vặt. Nhưng cách đơn giản
+là đọc qua **mã nguồn** của những bài viết khác để xem các bạn khác đã
+làm gì và bạn có thể bắt chước theo hay không. Bạn có thể tìm thấy
+mã nguồn của các bài viết tại [github] [].
+
+* Dùng mặt cười:
+   xem các bài của `n0b0dy`. Ví dụ [bài viết về cài đặt ArchLinux] [n0b0dy_arch_install].
+   Danh sách các mặt cười có ở [smilies] [].
+* Trình bày mã nguồn trong bài viết:
+   [Vim-Python3] []
+* Mục lục, danh sách, thẻ, đề mục,..: Chính bài viết này
 
 [kramdown]: http://kramdown.rubyforge.org/quickref.html
 [nanoc]: http://nanoc.stoneship.org/docs/
@@ -257,3 +264,6 @@ bài viết của bạn.
 [gitref]: http://gitref.dragula.org
 [gitconfig]: /doc/git/gitconfig
 [github]: https://github.com/archlinuxvn/home
+[n0b0dy_arch_install]: /blog/~n0b0dy/install_archlinux_newbie/
+[Vim-Python3]: /blog/~redlotus/vim_and_python3/
+[smilies]: /i/sm/
