vn.author-guide: add ident note. Fix name of the 1st section

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -20,7 +20,7 @@ Tác giả viết bài cần nắm các bước kỹ thuật, cách sử dụng 
 viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết bài
 được chia thành các nhóm như sau đây.
 
-## Nhóm A: Chỉ thực hiện một lần
+## Nhóm A: Yêu cầu bắt buộc
 
 1. Tài khoản để sửa bài. Đây là tài khoản để truy cập vào mã nguồn (git)
    của trang chủ. Mã nguồn để trên máy phục vụ <http://viettug.org>.
@@ -241,7 +241,10 @@ bài viết của bạn.
 
 9. Để trình bày mã nguồn, để đoạn mã nguồn ngắn trong cặp dấu nháy ngược (\`),
    Đối với các đoạn mã dài, hãy đặt chúng trong `<pre> ... </pre>`,
-   hoặc dùng cách thụt đầu dòng 4 khoảng trắng cho mỗi dòng của đoạn mã;
+   hoặc dùng cách thụt đầu dòng 4 khoảng trắng cho mỗi dòng của đoạn mã
+   _(4 khoảng trắng so với `indent` hiện tại, không phải so với cột đầu tiên;
+   ví dụ, nếu đoạn văn hiện tại đang thụt đầu dòng 2 khoảng trắng, thì
+   bạn sẽ cần 6 khoảng trắng so với cột đầu tiên để trình bày mã)_;
    cách sau cùng là tốt nhất, ít gây lỗi nhất.
 
 ## Những ví dụ
