vn.members: add

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -10,7 +10,7 @@ Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhi
 * **Giảng viên:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
-* **Khác:** cube
+* **Khác:** cube, longgia2001
 
 # Máy dùng ArchLinux
 
