vn.news: offline6

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,6 +4,8 @@ allow_comment: yes
 tags: ['archlinuxvn']
 ---
 
+* *16/9/2012:* [Họp mặt để nhận áo thun với logo ArchLinux] [offline6]
+
 * *29/7/2012:* Họp mặt nhóm người dùng ArchLinux tại Sài Gòn. Thời gian
   và địa điểm được thông báo ở [nhóm thư] [offline5].
 
@@ -22,4 +24,5 @@ tags: ['archlinuxvn']
 
 [offline5]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/d6df23e614c0fde3
 [doodle5]: http://www.doodle.com/2ymbq9y23rb2dhfs
+[offline6]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/ce1b57e8cc451bdb?hl=en
 [saigonlug]: http://groups.google.com/group/saigonlug/browse_thread/thread/65ab2c978204c3d8
