--- a/content/index.html
+++ b/content/index.html
@@ -17,7 +17,10 @@ Nếu bạn muốn tìm hiểu về [ArchLinux] [] hoặc muốn giao lưu, kế
 người Việt Nam khác đang dùng [ArchLinux] [], trang web này cùng với tài liệu
 và các kênh liên lạc của nó sẽ giúp ích cho bạn!
 
+Để viết bài cho ArchLinuxVn, mời bạn xem [Author's Guide][].
+
 [list]: http://groups.google.com/group/archlinuxvn/
 [irc]: /vn/irc/
 [github]: http://github.com/archlinuxvn/
 [ArchLinux]: /faq/what_is_archlinux/
+[Author's Guide]: /vn/author-guide/
