vn.author-guide: fix idea

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -131,7 +131,7 @@ bài viết của bạn.
 
 1. Đặt tên tập tin chỉ gồm chữ thường, dấu gạch chân và con số. Không dùng
    khoảng trắng, ký tự đặc biệt, tiếng Việt có dấu khi đặt tên tập tin.
-   Đặc biệt, không được đặt tên tập tin có nhiều hơn hai dấu chấm (`.`)
+   Đặc biệt, không được đặt tên tập tin có nhiều hơn một chấm (`.`)
    _(một dấu chấm đã dùng cho phần mở rộng)_, và không được dùng phần
    mở rộng là `.sh` _(vì `tuxfamily` sẽ sinh ra lỗi `500` khi gặp các tập
    tin này. Bộ biên dịch sẽ xóa mọi tập tin có đuôi `.sh`.)
