vn.members.contributors: add

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -5,6 +5,7 @@ tags: ['archlinuxvn']
 ---
 
 Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
+Đóng góp của các thành viên được ghi nhận ở trang riêng [Contributors](contributors/).
 
 * **Sinh viên:** [n0b0dy], [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki
 * **Giảng viên:** tanphu, favadi, lamhuuphuoc
