vn.members: update

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -5,13 +5,17 @@ tags: ['archlinuxvn']
 ---
 
 Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
+Danh sách này không đầy đủ. Để bổ sung thành viên vào danh sách này, vui
+lòng liên hệ `n0b0dy`.
+
 Đóng góp của các thành viên được ghi nhận ở trang riêng [Contributors](contributors/).
 
-* **Sinh viên:** [n0b0dy], [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki
+* **Sinh viên:** [n0b0dy], [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki,
+  BiAlan
 * **Giảng viên:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
-* **Khác:** cube, longgia2001
+* **Khác:** cube, longgia2001, rmrm, Minh Nhật
 
 # Máy dùng ArchLinux
 
