vn.members: update & fix typo

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -10,12 +10,13 @@ lòng liên hệ `n0b0dy`.
 
 Đóng góp của các thành viên được ghi nhận ở trang riêng [Contributors](contributors/).
 
-* **Sinh viên:** [n0b0dy], [NgoHuy] [], quangteospk, VHNgoc, [redlotus] [], Mitsuki,
-  BiAlan
-* **Giảng viên:** tanphu, favadi, lamhuuphuoc
+* **Sinh viên:**
+    [n0b0dy], [NgoHuy] [], quangteospk,
+    VHNgoc, [redlotus] [], Mitsuki, BiAlan
+* **Giảng viên:** tanphu, favadi, lamhuuphuoc, n0bawk
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
-* **Khác:** cube, longgia2001, rmrm, Minh Nhật
+* **Khác:** cube, longgia2001, rmrf, Minh Nhật
 
 # Máy dùng ArchLinux
 
