--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -13,10 +13,10 @@ lòng liên hệ `n0b0dy`.
 * **Sinh viên:**
     [n0b0dy], [NgoHuy] [], quangteospk,
     VHNgoc, [redlotus] [], Mitsuki, BiAlan
-* **Giảng viên:** tanphu, favadi, lamhuuphuoc, n0bawk
+* **Giáo dục:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
-* **Khác:** cube, longgia2001, rmrf, Minh Nhật
+* **Khác:** cube, longgia2001, rmrf, Minh Nhật, n0bawk
 
 # Máy dùng ArchLinux
 
@@ -29,6 +29,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |icy PC       |2010-10-18|3.4.9-1-pae |e17      |
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
 |Goodtrans    |2011-11-10|3.4.9-1     |none     |
+|n0bawk       |2012-01-12|?.?.?-?     |awesome  |
 |[l00s3r][]   |2012-04-25|3.0.40-1-lts|none     |
 |n0b0dy       |2012-08-09|3.4.8-1     |lxde     |
 |icy office   |2012-10-17|3.5.3-1     |e17      |
