vn.members: add luffy kernel

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -11,7 +11,7 @@ lòng liên hệ `n0b0dy`.
 Đóng góp của các thành viên được ghi nhận ở trang riêng [Contributors](contributors/).
 
 * **Sinh viên:**
-    [n0b0dy], [NgoHuy] [], quangteospk,
+    [n0b0dy], [NgoHuy] [], luffy,
     VHNgoc, [redlotus] [], Mitsuki, BiAlan
 * **Giáo dục:** tanphu, favadi, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
@@ -32,6 +32,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |n0bawk       |2012-01-12|?.?.?-?     |awesome  |
 |[l00s3r][]   |2012-04-25|3.0.40-1-lts|none     |
 |n0b0dy       |2012-08-09|3.4.8-1     |lxde     |
+|luffy        |2012-08-25|3.5.3-1     |dwm      |
 |icy office   |2012-10-17|3.5.3-1     |e17      |
 |redlotus     |????-??-??|3.4.6-1     |monsterwm|
 
