vn.author-guide: fix typo

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -129,13 +129,11 @@ bài viết của bạn.
 
 1. Viết cái gì là tùy bạn. Nghĩa là bạn có thể viết về bất kỳ chủ đề nào
    bạn thấy có ích cho bản thân hoặc người khác. Nếu bài viết có thể
-   của những người đi sau, bạn nên để bài viết trong thư mục `doc` với
-   có ích cho người khác, có thể dùng lâu dài, có thể gợi ý sự đóng góp
-   sự lựa chọn thư mục thích hợp.
+   có ích cho người đi sau, bạn nên để bài viết trong thư mục `doc`.
 
 2. Để `viết tốt` bạn cần quá trình phấn đấu và tập luyện lâu dài. Nên
    bắt đầu từ những bài nhỏ rồi sẽ đến các bài lớn và thật sự có ích.
-   Nếu không bắt đầu viết, bạn sẽ chẳng biết viết thế nào. Vì thế chẳng
+   Nếu không bắt đầu viết, bạn sẽ chẳng biết viết thế nào. Vì thế không
    câu trả lời nào dành cho bạn, khi bạn hỏi `viết cái gì`.
 
 ### Đặt tên tập tin
