vn.author-guide: clean up

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -128,8 +128,7 @@ bài viết của bạn.
 ### Viết cái gì
 
 1. Viết cái gì là tùy bạn. Nghĩa là bạn có thể viết về bất kỳ chủ đề nào
-   bạn thấy có ích cho bản thân hoặc người khác. Nếu bài viết có thể
-   có ích cho người đi sau, bạn nên để bài viết trong thư mục `doc`.
+   bạn thấy có ích cho bản thân hoặc người khác.
 
 2. Để `viết tốt` bạn cần quá trình phấn đấu và tập luyện lâu dài. Nên
    bắt đầu từ những bài nhỏ rồi sẽ đến các bài lớn và thật sự có ích.
