vn.member: +dragula-lc0

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -27,6 +27,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |:------------|:--------:|:----------:|:-------:|
 |zosolz       |2010-07-04|?.?.?-?     |xmonad   |
 |icy PC       |2010-10-18|3.4.9-1-pae |e17      |
+|dragula-lc0  |2010-11-06|2.6.39      |(none)   |
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
 |Goodtrans    |2011-11-10|3.4.9-1     |none     |
 |n0bawk       |2012-01-12|?.?.?-?     |awesome  |
