vn.members: add the oldest member of the group;)

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -25,6 +25,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 
 | Tên máy     | Cài đặt  | Nhân       |VM/DE    |
 |:------------|:--------:|:----------:|:-------:|
+|longgia2001  |2007-09-27|3.5.3-1     |fluxbox  |
 |zosolz       |2010-07-04|?.?.?-?     |xmonad   |
 |icy PC       |2010-10-18|3.4.9-1-pae |e17      |
 |dragula-lc0  |2010-11-06|2.6.39      |(none)   |
