--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -31,7 +31,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |dragula-lc0  |2010-11-06|2.6.39      |(none)   |
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
 |Goodtrans    |2011-11-10|3.4.9-1     |none     |
-|n0bawk       |2012-01-12|?.?.?-?     |awesome  |
+|n0bawk       |2012-01-12|3.4.9-1     |awesome+lxde  |
 |[l00s3r][]   |2012-04-25|3.0.40-1-lts|none     |
 |n0b0dy       |2012-08-09|3.4.8-1     |lxde     |
 |luffy        |2012-08-25|3.5.3-1     |dwm      |
