--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -27,15 +27,15 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |:------------|:--------:|:----------:|:-------:|
 |longgia2001  |2007-09-27|3.5.3-1     |fluxbox  |
 |zosolz       |2010-07-04|?.?.?-?     |xmonad   |
-|icy PC       |2010-10-18|3.4.9-1-pae |e17      |
-|dragula-lc0  |2010-11-06|2.6.39      |(none)   |
+|icy PC       |-----10-18|3.4.9-1-pae |e17      |
+|dragula-lc0  |-----11-06|2.6.39      |(none)   |
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
-|Goodtrans    |2011-11-10|3.4.9-1     |none     |
+|Goodtrans    |-----11-10|3.4.9-1     |none     |
 |n0bawk       |2012-01-12|3.4.9-1     |awesome+lxde  |
-|[l00s3r][]   |2012-04-25|3.0.40-1-lts|none     |
-|n0b0dy       |2012-08-09|3.4.8-1     |lxde     |
-|luffy        |2012-08-25|3.5.3-1     |dwm      |
-|icy office   |2012-10-17|3.5.3-1     |e17      |
+|[l00s3r][]   |-----04-25|3.0.40-1-lts|none     |
+|n0b0dy       |-----08-09|3.4.8-1     |lxde     |
+|luffy        |-----08-25|3.5.3-1     |dwm      |
+|icy office   |-----10-17|3.5.3-1     |e17      |
 |redlotus     |????-??-??|3.4.6-1     |monsterwm|
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
