--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -41,7 +41,9 @@ Bạn cần lưu ý vài điểm sau khi trao đổi trên kênh IRC
 * mọi nội dung trao đổi sẽ được các [bot] [] ghi lại và [lưu trữ trên
   trang chủ] [irclog]. Trang lưu trữ này được bảo vệ bởi chìa khóa,
   được dùng làm tư liệu trong tương lai _(hiện tại chưa có mục đích cụ thể)_;
-* bạn có thể văng tục, nói bậy, đó là quyền cá nhân của bạn,
+* bạn có thể văng tục, nói bậy, đó là quyền cá nhân của bạn
+    _(thực ra việc này chỉ có hại cho bạn, nên bạn muốn làm hại chính bạn
+      bao nhiêu là tùy thích, không ai cấm)_,
   **NHƯNG BẠN PHẢI TÔN TRỌNG THÀNH VIÊN KHÁC**, và
 * tốt nhất đừng nên làm các thành viên khác khó chịu;
 * biết lắng nghe, biết cách đặt câu hỏi và biết chịu khó học hỏi với
