vn.irc: add notes (moderators, contents)

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -21,7 +21,7 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 * Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc
   ở Việt Nam (9h sáng - 5 giờ chiều).
 * Bot: Xem thông tin ở [bot] []
-* Quản lý kênh: **z1y**, **n0b0dy**
+* Quản lý kênh: `z1y`, `n0b0dy`
 * [Giao diện web] [webirc]
 
 ## Giao diện web của kênh
@@ -54,7 +54,32 @@ Bạn cần lưu ý vài điểm sau khi trao đổi trên kênh IRC
 * bạn có quyền làm theo ý của bạn, nhưng về lâu dài cộng đồng có thể
   tẩy chay bạn.
 
+## Nội dung trao đổi
+
+Bạn được khuyến khích trao đổi các vấn đề liên quan tới `Linux`, `ArchLinux`
+và mã nguồn mở. Thực tế thì trên kênh bàn rất nhiều vấn đề khác nhau,
+không chỉ giới hạn ở chủ đề nào. Một số thành viên khác có thể thấy không hợp
+lý và nhắc nhở, khi đó nếu bạn đang nói lạc đề thì hãy nhanh chóng dừng lại.
+
+Các đoạn mã, `log`,... các đoạn trao đổi dài không nên ghi trực tiếp trên
+kênh, mà thông qua dịch vụ như [Pastebin.com] []. Để gửi hình ảnh, bạn đừng
+nên dùng `ImageHack.us` do dịch vụ này bị chặn ở nhiều nơi. Bạn có thể dùng
+chẳng hạng [PostImage.org] [].
+
+## Điều hành kênh
+
+`n0b0dy` là người đã đăng ký kênh ở `freenode`, mặc dù kênh đã hoạt động
+từ trước đó. Hai thành viên có quyền quản lý kênh là `n0b0dy` và `z1y`.
+
+`Quản lý` ở đây được hiểu là nhằm xử lý các vấn đề kỹ thuật của kênh:
+các sự cố , cài đặt và điều chỉnh các `bot`, ... Không có bất kỳ sự quản
+lý nào về `nội dung`; tuy  nhiên, người điều hành có thể giúp kênh từ
+chối hoặc nhắc nhở các thành viên sau khi có sự hội ý và thống nhất
+với các thành viên khác trên kênh.
+
 [webirc]: http://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4
 [bot]: /vn/bot/
 [irclog]: /irclogs/
 [freenode servers]: http://freenode.net/irc_servers.shtml
+[Pastebin.com]: http://pastebin.com/
+[PostImage.org]: http://PostImage.org
