vn.lists: fix typo. Add notes

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -22,8 +22,8 @@ Có hai nhóm được cung cấp bởi GoogleGroups:
 
 Để đăng ký vào các nhóm thư này, bạn có thể dùng giao diện web, hoặc
 gửi thư bất kỳ tới địa chỉ
-  <archlinuxvn+subscribe@googlegroups.com> hoặc
-  <archlinuxvn+dot+subscribe@googlegroups.com>.
+  <mailto:archlinuxvn+subscribe@googlegroups.com> hoặc
+  <mailto:archlinuxvn+dot+subscribe@googlegroups.com>.
 
 ## Quy tắc ứng xử
 
@@ -87,6 +87,10 @@ nêu trong nhóm thư, cách giải quyết được đề nghị như sau:
 * Trong trường hợp không giải quyết được bằng thư riêng, bạn có thể nêu
   vấn đề ra cho cả nhóm, với đầy đủ các lý lẽ, dẫn chứng trước khi kết luận
   _(những kết luận không có đầy đủ lý lẽ đều nông cạn, cảm tính)_
+
+Bạn có thể luôn luôn lựa chọn nêu vấn đề ra cho tất cả các thành viên
+khác được biết, nhưng hãy luôn tuân theo quy tắc đầu tiên là **TÔN TRỌNG
+THÀNH VIÊN KHÁC**.
 
 Như vậy, những người điều hành *giúp* nhưng không giải quyết thay bạn
 các vấn đề liên quan tới nội dung. Trường hợp bạn là người điều hành
