vn.lists: fix typo

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -70,7 +70,7 @@ thuộc dạng này.
 
 ## Điều hành nhóm thư
 
-Mỗi nhóm thư có một vài người điều hành, đóng vai trò chính là sử lý các
+Mỗi nhóm thư có một vài người điều hành, đóng vai trò chính là xử lý các
 sự cố kỹ thuật, giúp nhóm thư không bị `bom thư`, hoặc giúp đỡ các thành
 viên mới vượt qua hệ thống chặn thư tùy tiện của GoogleGroup.
 
