vn.lists: add draft mark

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -1,7 +1,7 @@
 ---
 title: Nhóm thư trao đổi
 allow_comment: yes
-tags: ['list', 'archlinuxvn', 'email']
+tags: ['list', 'archlinuxvn', 'email', 'draft']
 ---
 
 * TOC
