--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -35,7 +35,9 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |[l00s3r][]   |-----04-25|3.0.40-1-lts|none     |
 |n0b0dy       |-----08-09|3.4.8-1     |lxde     |
 |luffy        |-----08-25|3.5.3-1     |dwm      |
-|icy office   |-----10-17|3.5.3-1     |e17      |
+|marchkit     |-----09-02|latest      |KDE      |
+|hatchery     |-----10-03|latest      |(none)   |
+|icy office   |--------17|3.5.3-1     |e17      |
 |redlotus     |????-??-??|3.4.6-1     |monsterwm|
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
