--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -38,7 +38,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |marchkit     |-----09-02|latest      |KDE      |
 |hatchery     |-----10-03|latest      |         |
 |icy office   |--------17|3.5.3-1     |e17      |
-|redlotus     |????-??-??|3.4.6-1     |monsterwm|
+|redlotus     |????-??-??|3.4.6-1     |-monsterwm-, KDE|
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
 
