vn.members: update style

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -35,10 +35,10 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |[l00s3r][]   |-----04-25|3.0.40-1-lts|         |
 |n0b0dy       |-----08-09|3.4.8-1     |lxde     |
 |luffy        |-----08-25|3.5.3-1     |dwm      |
-|marchkit     |-----09-02|latest      |KDE      |
-|hatchery     |-----10-03|latest      |         |
+|marchkit     |-----09-02|_latest_      |KDE      |
+|hatchery     |-----10-03|_latest_      |         |
 |icy office   |--------17|3.5.3-1     |e17      |
-|redlotus     |????-??-??|3.4.6-1     |-monsterwm-, KDE|
+|redlotus     |????-??-??|3.4.6-1     |<s>monsterwm</s>, KDE|
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
 
